[package]
name = "offsetter"
version = "0.1.0"
edition = "2021"

[lib]
name = "offsetter"
path = "src/lib.rs"

[[bin]]
name = "offsetter-cli"
path = "src/bin.rs"

[dependencies]
pdb = "0.8.0"
regex = "1.10.6"
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
